Version 3.4.1

- Many bugfixes regarding crashes when loading or saving songs in certain circumstances

- Auto-build implemented - Github is now responsible for making the releases, which guarantees the binary matches the source

- Updater modified to find its own update URL