@@ -1,9 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="cef.redist.x64" version="93.1.11" targetFramework="net452" />
-  <package id="cef.redist.x86" version="93.1.11" targetFramework="net452" />
-  <package id="CefSharp.Common" version="93.1.111" targetFramework="net452" />
-  <package id="CefSharp.WinForms" version="93.1.111" targetFramework="net452" />
   <package id="CsvHelper" version="15.0.1" targetFramework="net45" />
   <package id="Microsoft.CodeQuality.Analyzers" version="2.9.8" targetFramework="net45" developmentDependency="true" />
   <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net45" />
