@@ -5,3 +5,7 @@ Version 3.4.1
 - Auto-build implemented - Github is now responsible for making the releases, which guarantees the binary matches the source
 
 - Updater modified to find its own update URL
+
+- Moved DLLs to their own folder where possible, to make it easier to find the exe
+
+- Removed unnecessary dependencies
